--- a/modules/server/src/main/resources/vm/node/manage/internal.html
+++ b/modules/server/src/main/resources/vm/node/manage/internal.html
@@ -68,7 +68,7 @@
     </table>
 </div>
 
-<div class="info" th:if="${data?.beanMem}">
+<div class="info" th:if="${data?.get('beanMem')}">
     <label> jvm内存</label>
     <table class="layui-table" style="margin-top: 10px">
         <thead>
@@ -114,7 +114,6 @@
         </thead>
         <tbody>
 
-        #set($hashNetStat=true)
         <tr th:each="item : ${data?.netstat}">
             <td th:text="${item?.name}"></td>
             <td th:text="${item?.protocol}"></td>
@@ -167,8 +166,8 @@
             tableRender({
                 id: 'tab_threadInfos',
                 elem: '#tab_threadInfos',
-                url: './threadInfos?tag=$!tag',
-                cols: [[
+                url: './threadInfos?tag=[[${tag}]]',
+                cols: [
                     {field: 'id', title: '线程id', sort: true},
                     {field: 'name', title: '线程名称', sort: true},
                     {field: 'status', title: '线程状态', templet: "#tem_status", sort: true},
@@ -178,15 +177,23 @@
                     {field: 'waitedTime', title: '阻塞总时间(毫秒)', sort: true},
                     {field: 'isInNative', title: '本地线程', templet: "#tem_isInNative", sort: true},
                     {field: 'isSuspended', title: '是否挂起', templet: "#tem_isSuspended", sort: true}
-                ]],
+                ],
                 page: true,
                 parseData: function (res) { //res 即为原始返回的数据
-                    return {
-                        "code": res.code, //解析接口状态
-                        "msg": res.msg, //解析提示文本
-                        "count": res.data.count, //解析数据长度
-                        "data": res.data.data //解析数据列表
-                    };
+                    if (res.code == 200) {
+                        return {
+                            "code": res.code, //解析接口状态
+                            "msg": res.msg, //解析提示文本
+                            "count": res.data.count, //解析数据长度
+                            "data": res.data.data //解析数据列表
+                        };
+                    } else {
+                        return {
+                            "code": res.code, //解析接口状态
+                            "msg": res.msg, //解析提示文本
+                            "count": 0, //解析数据长度
+                        };
+                    }
                 }
             });
         }
