--- a/modules/server/src/main/resources/vm/system/update.html
+++ b/modules/server/src/main/resources/vm/system/update.html
@@ -50,7 +50,7 @@
                 elem: '#uploadJar',
                 url: './uploadJar.json',
                 data: {
-                    nodeId: "$!node.id"
+                    nodeId: "[[${node?.id}]]"
                 },
                 exts: 'jar',
                 acceptMime: '.jar',
