--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org.1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,7 @@
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
+<input id="domainPath" type="hidden" th:value="<%= '$' %>{domain}"/>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
