--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title build="<%= htmlWebpackPlugin.options.build %>" ><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 <noscript>
