--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang='zh-CN'>
 <head>
     <title>jpom</title>
     <meta http-equiv="refresh" content="0;url=https://jpom-site.keepbx.cn"/>
 </head>
-<body> 进入中</body>
+<body> 进入中：<a href="https://jpom-site.keepbx.cn">https://jpom-site.keepbx.cn</a>
+</body>
 </html>
