兼容二级路径

--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -16,7 +16,9 @@
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<input id="domainPath" type="hidden" th:value="<%= '$' %>{domain}"/>
+<script>
+    window.routerBase = "/";
+</script>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
