新版本 UI 同步添加 common.js

--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org.1999/xhtml">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="keywords" content="Jpom,Java项目管理,Jar管理,Java管理系统,服务器项目运维"/>
-    <meta name="description" content="Jpom-项目管理系统"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title build="<%= htmlWebpackPlugin.options.build %>" ><%= htmlWebpackPlugin.options.title %></title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="keywords" content="Jpom,Java项目管理,Jar管理,Java管理系统,服务器项目运维"/>
+	<meta name="description" content="Jpom-项目管理系统"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<title build="<%= htmlWebpackPlugin.options.build %>"><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+	<strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <script>
-    window.routerBase = "/";
+	window.routerBase = "/";
 </script>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+<div id="jpomCommonJs"><!--Don't delete this line, place for public JS --></div>
 </body>
 </html>
