二级代理路径问题

--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -17,7 +17,7 @@
 	<strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <script>
-	window.routerBase = "/";
+	window.routerBase = "<routerBase>";
 </script>
 <div id="app"></div>
 <!-- built files will be auto injected -->
