ssh 新增删除文件夹

--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -18,6 +18,8 @@
 </noscript>
 <script>
 	window.routerBase = "<routerBase>";
+	// debug
+	window.routerBase = window.routerBase === "<routerBase>" ? "": window.routerBase;
 </script>
 <div id="app"></div>
 <!-- built files will be auto injected -->
