脚本模版调整、websocket 权限验证

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 
 -->
 <!DOCTYPE html>
-<html lang='zh-CN'>
+<html lang='en'>
 <head>
-    <title>jpom</title>
-    <meta http-equiv="refresh" content="0;url=https://jpom-site.keepbx.cn"/>
+	<title>Jpom</title>
+	<meta name="keywords" content="Jpom,Java项目管理,Jar管理,Java管理系统,服务器项目运维"/>
+	<meta name="description" content="Jpom-项目管理系统,一款简而轻的低侵入式在线构建、自动部署、日常运维、项目监控软件"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="refresh" content="0;url=https://jpom-site.keepbx.cn"/>
 </head>
 <body> 进入中：<a href="https://jpom-site.keepbx.cn">https://jpom-site.keepbx.cn</a>
 </body>
