--- a/web-vue/public/index.html
+++ b/web-vue/public/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="build-time" content="<%= htmlWebpackPlugin.options.build %>">
+    <meta name="build-env" content="<%= htmlWebpackPlugin.options.env %>">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
