--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <head>
 	<title>Jpom</title>
 	<meta name="keywords" content="Jpom,Java项目管理,Jar管理,Java管理系统,服务器项目运维"/>
-	<meta name="description" content="Jpom-项目管理系统,一款简而轻的低侵入式在线构建、自动部署、日常运维、项目监控软件"/>
+	<meta name="description" content="Jpom-项目管理系统,简而轻的低侵入式在线构建、自动部署、日常运维、项目监控软件"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="refresh" content="0;url=https://jpom-site.keepbx.cn"/>
 </head>
